Change the pre-rendering mode to the "WebAssemblyPrerendered"
- see also: https://github.com/jsakamoto/BlazorWasmPreRendering.Build#render-mode

--- a/BlazorWasmApp1.csproj
+++ b/BlazorWasmApp1.csproj
@@ -8,6 +8,7 @@
 
   <PropertyGroup>
     <BlazorWasmPrerenderingDeleteLoadingContents>true</BlazorWasmPrerenderingDeleteLoadingContents>
+    <BlazorWasmPrerenderingMode>WebAssemblyPrerendered</BlazorWasmPrerenderingMode>
   </PropertyGroup>
 
   <ItemGroup>
